--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -504,7 +504,7 @@
     "* Punctuation Removal\n",
     "* Number removal\n",
     "* Lowering the Text\n",
-    "* Tokenization i.e. split a tweet into words\n",
+    "* Tokenization i.e. split a review into words\n",
     "* Stop Word Removal: Stopwords are the commonly used words and are removed from the text as they do not add any value to the analysis\n",
     "* Stemming: Words are stemmed or diminished to their root/base form.  For example, ‘programmer’, ‘programming, ‘program’ are stemmed to ‘program’ \n"
    ]
