--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -608,7 +608,7 @@
    "metadata": {},
    "source": [
     "Basically, machine models are made by mathematical formulae, hence, they can only understand numerical structures. Hence, we have to extract from our text data (reviews) specific information (<b>feature</b>) which are numerically interpretable and are linked to our goal (Sentiment Analysis). <br>\n",
-    "In the present Sentiment Analysis problem, we want to build a machine which is capable of reading a review and tell us whether this tweet has a positive or negative sentiment. <br>\n",
+    "In the present Sentiment Analysis problem, we want to build a machine which is capable of reading a review and tell us whether this review has a positive or negative sentiment. <br>\n",
     "   \n",
     "* We build a frequency dictionary {(word, label): freq} which count the number of times (frequency) that the word is associated with the label. \n",
     "    * For example, ('happy', 1): 14 means that the word \"happy\" appears in positive reviews 14 times.\n",
