--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -1918,7 +1918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UNQ_C4 GRADED FUNCTION: predict_tweet\n",
+    "# UNQ_C4 GRADED FUNCTION: predict_reviewn",
     "def predict_review(review, freqs, theta):\n",
     "    '''\n",
     "    Input: \n",
@@ -1955,18 +1955,18 @@
     "def test_logistic_regression(test_x, test_y, freqs, theta, predict_review=predict_review):\n",
     "    \"\"\"\n",
     "    Input: \n",
-    "        test_x: a list of tweets\n",
-    "        test_y: (m, 1) vector with the corresponding labels for the list of tweets\n",
+    "        test_x: a list of reviews\n",
+    "        test_y: (m, 1) vector with the corresponding labels for the list of reviews\n",
     "        freqs: a dictionary with the frequency of each pair (or tuple)\n",
     "        theta: weight vector of dimension (3, 1)\n",
     "    Output: \n",
-    "        accuracy: (# of tweets classified correctly) / (total # of tweets)\n",
+    "        accuracy: (# of tweets classified correctly) / (total # of reviews)\n",
     "    \"\"\"   \n",
     "    # the list for storing predictions\n",
     "    y_hat = list()\n",
     "    \n",
     "    for rv in test_x:\n",
-    "        # get the label prediction for the tweet\n",
+    "        # get the label prediction for the review\n",
     "        y_pred = predict_review(rv, freqs, theta)\n",
     "        \n",
     "        if y_pred > 0.5:\n",
