--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -632,7 +632,7 @@
     "    freqs: a dictionary mapping each (word, sentiment) pair to its frequency\n",
     "    \"\"\"\n",
     "    yslist = np.squeeze(ys).tolist()##Remove axes of length one from a numpy darray\n",
-    "    # start with an empty dict and populate it by looping over all tweets\n",
+    "    # start with an empty dict and populate it by looping over all reviews\n",
     "    freqs = {}\n",
     "    for y, review in zip(yslist, reviews):\n",
     "        for word in process_review(review):\n",
@@ -1716,7 +1716,7 @@
     "def extract_features(review, freqs, process_review=process_review):\n",
     "    '''\n",
     "    Input: \n",
-    "        review: a list of words for one tweet\n",
+    "        review: a list of words for one review\n",
     "        freqs: a dictionary corresponding to the frequencies of each tuple (word, label)\n",
     "    Output: \n",
     "        x: a feature vector of dimension (1,3)\n",
@@ -1928,7 +1928,7 @@
     "    Output: \n",
     "        y_pred: the probability of a tweet being positive or negative\n",
     "    '''\n",
-    "    # extract the features of the tweet and store it into x\n",
+    "    # extract the features of the review and store it into x\n",
     "    x = extract_features(review, freqs)\n",
     "    # make the prediction using x and theta\n",
     "    y_pred = sigmoid(np.dot(x, theta))\n",
