--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -420,15 +420,11 @@
     }
    ],
    "source": [
-    "positive_reviews = []\n",
-    "negative_reviews = []\n",
-    "for i in df3.index:\n",
-    "    if df3.loc[i, \"Recommended\"] == 'yes':\n",
-    "        positive_reviews.append(df3.loc[i, \"Review\"])\n",
-    "    else:\n",
-    "        negative_reviews.append(df3.loc[i, \"Review\"])\n",
+    "positive_reviews = df3[df3[\"Recommended\"] == 'yes'][\"Review\"].tolist()\n",
+    "negative_reviews = df3[df3[\"Recommended\"] != 'yes'][\"Review\"].tolist()\n",
+    "\n",
     "print(len(positive_reviews))\n",
-    "print(len(negative_reviews))"
+    "print(len(negative_reviews))\n"
    ]
   },
   {
@@ -1918,7 +1914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UNQ_C4 GRADED FUNCTION: predict_reviewn",
+    "# UNQ_C4 GRADED FUNCTION: predict_reviewn\n",
     "def predict_review(review, freqs, theta):\n",
     "    '''\n",
     "    Input: \n",
