--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -421,7 +421,7 @@
    ],
    "source": [
     "positive_reviews = df3[df3[\"Recommended\"] == 'yes'][\"Review\"].tolist()\n",
-    "negative_reviews = df3[df3[\"Recommended\"] != 'yes'][\"Review\"].tolist()\n",
+    "negative_reviews = df3[df3[\"Recommended\"] == 'no'][\"Review\"].tolist()\n",
     "\n",
     "print(len(positive_reviews))\n",
     "print(len(negative_reviews))\n"
