--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +127,7 @@
        "[3598 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +270,7 @@
        "[3598 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,7 @@
        "[3598 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +461,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -493,6 +494,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -593,6 +595,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,6 +603,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1679,7 @@
        " ...}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,6 +1689,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1692,6 +1697,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1705,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,6 +1747,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1749,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,6 +1773,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1773,7 +1781,7 @@
     "\n",
     "#### Regression (logit)\n",
     "$$z = w_0 + w_1 x_1 + w_2 x_2 + \\ldots + w_n x_n$$\n",
-    "In our case $n$ is equal to $2$.\n",
+    "In this case $n$ is equal to $2$.\n",
     "\n",
     "#### The prediction\n",
     "$$ y_{\\text{pred}} = \\sigma(z) = \\frac{1}{1+\\exp^{-z}}$$\n",
@@ -1789,6 +1797,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1813,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,30 +1837,36 @@
     "    Output:\n",
     "        J: the final cost\n",
     "        theta: your final weight vector\n",
-    "    Hint: you might want to print the cost to make sure that it is going down.\n",
     "    '''\n",
+    "    \n",
     "    # get 'm', the number of rows in matrix X\n",
     "    m = len(x)\n",
-    "    \n",
+    "    thetas = [theta]\n",
     "    for i in range(0, num_iters):\n",
     "        \n",
     "        # get z, the dot product of x and theta\n",
-    "        z = np.dot(x, theta)\n",
+    "        z = np.dot(x, thetas[-1])\n",
     "        \n",
     "        # get the sigmoid of z\n",
     "        h = sigmoid(z)\n",
     "        \n",
     "        # calculate the cost function\n",
     "        J = - (np.dot(y.T, np.log(h)) + np.dot((1-y).T, np.log(1-h))) / float(m)\n",
-    "\n",
-    "        # update the weights theta\n",
-    "        theta = theta - (alpha * np.dot(x.T, (h-y))) / float(m)\n",
     "        \n",
+    "        theta = thetas[-1] - (alpha * np.dot(x.T, (h-y))) / float(m)\n",
+    "        \n",
+    "        # Stopping criteria\n",
+    "        if np.linalg.norm(theta - thetas[-1]) < 1e-9:\n",
+    "            break\n",
+    "        thetas.append(theta)\n",
+    "        \n",
+    "\n",
     "    J = float(J)\n",
-    "    return J, theta"
+    "    return J, thetas[-1]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1862,22 +1877,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cost after training is 0.46042654.\n",
-      "The resulting vector of weights is [1e-08, 0.00039945, -0.00036723]\n"
+      "The cost after training is 0.44674229.\n",
+      "The resulting vector of weights is [2e-08, 0.00046008, -0.00042312]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_6932\\2383749413.py:31: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8784\\4127624321.py:36: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  J = float(J)\n"
      ]
     }
@@ -1891,12 +1906,13 @@
     "Y = train_y\n",
     "\n",
     "# Apply gradient descent\n",
-    "J, theta = gradientDescent(X, Y, np.zeros((3, 1)), 1e-9, 1500)\n",
+    "J, theta = gradientDescent(X, Y, np.zeros((3, 1)), 1e-9, 2000)\n",
     "print(f\"The cost after training is {J:.8f}.\")\n",
     "print(f\"The resulting vector of weights is {[round(t, 8) for t in np.squeeze(theta)]}\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1910,11 +1926,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# UNQ_C4 GRADED FUNCTION: predict_reviewn\n",
+    "# UNQ_C4 GRADED FUNCTION: predict_review\n",
     "def predict_review(review, freqs, theta):\n",
     "    '''\n",
     "    Input: \n",
@@ -1922,7 +1938,7 @@
     "        freqs: a dictionary corresponding to the frequencies of each tuple (word, label)\n",
     "        theta: (3,1) vector of weights\n",
     "    Output: \n",
-    "        y_pred: the probability of a tweet being positive or negative\n",
+    "        y_pred: the probability of a review being positive or negative\n",
     "    '''\n",
     "    # extract the features of the review and store it into x\n",
     "    x = extract_features(review, freqs)\n",
@@ -1933,6 +1949,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1944,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,10 +1973,10 @@
     "        freqs: a dictionary with the frequency of each pair (or tuple)\n",
     "        theta: weight vector of dimension (3, 1)\n",
     "    Output: \n",
-    "        accuracy: (# of tweets classified correctly) / (total # of reviews)\n",
+    "        accuracy: (# of reviews classified correctly) / (total # of reviews)\n",
     "    \"\"\"   \n",
     "    # the list for storing predictions\n",
-    "    y_hat = list()\n",
+    "    y_hat = []\n",
     "    \n",
     "    for rv in test_x:\n",
     "        # get the label prediction for the review\n",
@@ -1980,25 +1997,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic regression model's accuracy = 0.7483\n"
+      "Logistic regression model's accuracy on training dataset = 0.8246\n",
+      "Logistic regression model's accuracy on testing dataset = 0.7483\n"
      ]
     }
    ],
    "source": [
-    "tmp_accuracy = test_logistic_regression(test_x, test_y, freqs, theta)\n",
-    "print(f\"Logistic regression model's accuracy = {tmp_accuracy:.4f}\")"
+    "# Accuracy on train set\n",
+    "accuracy = test_logistic_regression(train_x, train_y, freqs, theta)\n",
+    "print(f\"Logistic regression model's accuracy on training dataset = {accuracy:.4f}\")\n",
+    "# Accuracy on test set\n",
+    "accuracy = test_logistic_regression(test_x, test_y, freqs, theta)\n",
+    "print(f\"Logistic regression model's accuracy on testing dataset = {accuracy:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2028,7 @@
      "output_type": "stream",
      "text": [
       "['excel', 'flight', 'club', 'world', 'british', 'airway', 'welcom', 'aboard', 'warm', 'continu', 'throughout', 'flight', 'crew', 'attent', 'friendli', 'profession', 'board', 'food', 'dinner', 'breakfast', 'good', 'well', 'chosen', 'select', 'wine', 'flight', 'entertain', 'offer', 'great', 'select', 'film', 'audio', 'seatflat', 'bed', 'comfort', 'british', 'airway', 'done', 'excel', 'job', 'design', 'comfort', 'suit', 'board', 'like', 'sleek', 'minimalist', 'design', 'flight', 'show', 'ba', 'among', 'worldâ€™', 'best', 'airlin']\n",
-      "[[0.84529378]]\n",
+      "[[0.87577085]]\n",
       "Positive sentiment\n"
      ]
     }
@@ -2022,6 +2044,13 @@
     "else: \n",
     "    print('Negative sentiment')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
