--- a/BA_data_analysis.ipynb
+++ b/BA_data_analysis.ipynb
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,8 @@
    ],
    "source": [
     "categories = [\"Seat Comfort\", \"Cabin Staff Service\", \"Food & Beverages\", \"Inflight Entertainment\", \"Ground Service\", \"Value For Money\"]\n",
-    "explode_values = [[0, 0, 0, 0.1, 0], [0, 0, 0, 0, 0.1], [0.1, 0, 0, 0, 0], [0, 0, 0.1, 0, 0], [0, 0, 0, 0.1, 0], [0.1, 0, 0, 0, 0]]\n",
+    "explode_values = [[0, 0, 0, 0.1, 0], [0, 0, 0, 0, 0.1], [0.1, 0, 0, 0, 0], [0, 0, 0.1, 0, 0], \n",
+    "                    [0, 0, 0, 0.1, 0], [0.1, 0, 0, 0, 0]]\n",
     "\n",
     "fig, axes = plt.subplots(3, 2, figsize=(10,6))\n",
     "\n",
