--- a/BA_sentiment_analysis.ipynb
+++ b/BA_sentiment_analysis.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
        " ...}"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,11 @@
    ],
    "source": [
     "# Test results\n",
-    "my_rv = \"An excellent flight in Club World on British Airways. The welcome aboard was warm and that continued throughout the flight. The crew were attentive, friendly and very professional. On board food for dinner and breakfast was good and there was a well chosen selection of wines. In flight entertainment offered a great selection of films and audio. The seat/flat bed was very comfortable - British Airways have done an excellent job in the design and comfort of the suites on board the A350. I liked the sleek, minimalist design. This flight showed that BA can be among the worldâ€™s best airlines.\"\n",
+    "my_rv = \"\"\"An excellent flight in Club World on British Airways. The welcome aboard was warm and that continued throughout the flight. The crew were attentive, \n",
+    "        friendly and very professional. On board food for dinner and breakfast was good and there was a well chosen selection of wines. \n",
+    "        In flight entertainment offered a great selection of films and audio. The seat/flat bed was very comfortable - British Airways have done an excellent job in the design \n",
+    "        and comfort of the suites on board the A350. I liked the sleek, minimalist design. This flight showed that BA can be among the worldâ€™s best airlines.\n",
+    "        \"\"\"\n",
     "print(process_review(my_rv))\n",
     "y_hat = predict_review(my_rv, freqs, theta)\n",
     "print(y_hat)\n",
